...
                android:layout_marginBottom="1dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ico"
                android:contentDescription="@string/home_icon_description"/>

            <LinearLayout
                android:id="@+id/albumListButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:paddingVertical="9dp"
                android:clickable="true"
...
                    android:contentDescription="@string/album_detail_back"
                    android:src="@drawable/arrow_forward" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="220dp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/performerListButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:clickable="true"
                android:focusable="true"
...
                    android:contentDescription="@string/performer_forward_button"
                    android:src="@drawable/arrow_forward" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewArtist"
                android:layout_width="match_parent"
                android:layout_height="220dp" />

            <LinearLayout
                android:id="@+id/collectorListButton"
                android:layout_width="wrap_content"
...
