<resources>
    <string name="app_name">VinylsMobile</string>
    <string name="album_cover">cover</string>
    <string name="albumes_title">Álbumes</string>
    <string name="title_activity_collection">CollectionActivity</string>
    <string name="txt_btn_visitor">Visitante</string>
    <string name="txt_btn_collect">Coleccionista</string>
    <string name="album_cover_photo">Album cover photo</string>
    <string name="description_placeholder">Descripción</string>
    <string name="year_placeholder">1998</string>
    <string name="album_detail_back">Album detail back button</string>
    <string name="album_title_placeholder">Album</string>
    <string name="album_genre_placeholder">Genero</string>
    <string name="album_label_placeholder">Disquera</string>

    <string name="performer_detail_back">Performer detail back button</string>
    <string name="performers_title">Artistas</string>
    <string name="performer_forward_button">Ir a la lista de artistas</string>
    <string name="performer_image">Performer image</string>
    <string name="performer_title_placeholder">Performer</string>
    <string name="performer_description">Description</string>
    <string name="fec_nac_placeholder">Fecha de nacimiento:</string>
    <string name="fec_crea_placeholder">Fecha de creación:</string>
    <string name="performer_year_placeholder">Año</string>
    <string name="performer_mes_placeholder">Mes</string>
    <string name="performer_dia_placeholder">Día</string>

    <string name="collectors_title">Coleccionistas</string>
    <string name="collectors_forward_button">Ir a la lista de coleccionistas</string>
    <string name="collector_name_placeholder">Coleccionista</string>
    <string name="collector_detail_back">Collector detail back button</string>
    <string name="collector_telephone_placeholder">Teléfono</string>
    <string name="collector_email_placeholder">Email</string>
    <string name="collectors_cover">+</string>
    <string name="collector_contact">Información de contacto</string>
    <string name="collector_albumes">Albumes del coleccionista</string>


    <string name="home_icon_description">Home Icon</string>
    <string name="main_description">Página principal de acceso a la aplicación</string>
    <string name="album_cover_description">Imágen del álbum</string>"
    <string name="performer_image_description">Imágen del artista</string>

    <string name="title_activity_performer_detail2">PerformerDetail2</string>
    <string name="title_activity_performer_details">PerformerDetailsActivity</string>
    <string name="title_activity_performer_detail">PerformerDetailActivity</string>

    <string name="placeholder_comment">Escribe tu comentario aquí</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="anio">Año</string>
    <string name="comment_album">Comenta este albúm</string>

    <string name="fab_collection_activity">Floating Action Button for the collection activity. It\'s purpose is to show a popup of options.</string>
    <string name="create_album">Crear Album</string>
    <string name="crear_album_title">Crear Album</string>
    <string name="nombre">Nombre</string>
    <string name="cover">Cubierta</string>
    <string name="fecha_lanzamiento">Fecha de lanzamiento</string>
    <string name="descripcion">Descripción</string>
    <string name="disquera">Disquera</string>
    <string name="genero">Género</string>

    <string-array name="genres">
        <item>Salsa</item>
        <item>Rock</item>
        <item>Folk</item>
        <item>Classical</item>
    </string-array>

    <string-array name="record_labels">
        <item>Elektra</item>
        <item>EMI</item>
        <item>Discos Fuentes</item>
        <item>Fania Records</item>
        <item>Sony Music</item>
    </string-array>
</resources>