...
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/albumCover"
            android:layout_width="0dp"
            android:layout_height="380dp"
            android:contentDescription="@string/album_cover_photo"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/albumName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:shadowColor="@color/black"
...
            android:radius="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/albumDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="30dp"
        android:text="@string/description_placeholder"
        android:textAlignment="center"
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/albumYear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/year_placeholder" />

        <TextView
            android:id="@+id/albumGenre"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/album_genre_placeholder" />

        <TextView
            android:id="@+id/albumLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/album_label_placeholder" />
    </LinearLayout>

    <LinearLayout
...
